--- a/styles/style.css
+++ b/styles/style.css
@@ -1,12 +1,77 @@
-form {
-  width: 300px;
-  max-width: 100%;
-  margin: 50px auto; 
-  padding: 20px;
+html,
+body {
+  padding: 0;
+  margin: 0;
+  font-family: sans-serif;
 }
-fieldset {
+* {
+  box-sizing: border-box;
+  outline: none;
+}
+.ba-form {
+  width: 350px;
+  height: auto;
+  max-width: 100%;
+  margin: 150px auto; 
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 5px;
+  box-shadow: 0 4px 16px #ccc;
+}
+.ba-form-wrapper {
   display: flex;
   flex-direction: column;
   outline: none;
   border: none;
+  color: rgb(38, 122, 38);
+}
+input[type="mail"]::placeholder,
+input[type="text"]::placeholder {
+  color: rgb(85, 102, 85);
+  opacity: .7;
+  font-size: 1rem;
+}
+.ba-form-wrapper__text {
+  font-size: 1.3rem;
+  margin-bottom: 5px;
+}
+.ba-form-wrapper__btn {
+  width: 100%;
+  height: 30px;
+  border: 1px solid rgba(85, 102, 85, .5);
+  border-radius: 5px;
+  font-size: 1.2rem;
+  padding-left: 10px;
+  margin-bottom: 20px;
+}
+.ba-form-number {
+  width: 20%;
+  height: 30px;
+  border-radius: 5px;
+  color: rgb(85, 102, 85);
+  margin-bottom: 30px;
+  font-size: 1rem;
+  padding: 0 5px;
+  border: 1px solid rgba(85, 102, 85, .5);
+}
+.ba-form-wrapper__area {
+  width: 100%;
+  height: 100px;
+  border-radius: 5px;
+  border: 1px solid rgba(85, 102, 85, .5);
+  font-size: 1.2rem;
+  padding: 10px;
+  margin-bottom: 30px;
+}
+.ba-form-wrapper__button {
+  display: inline-block;
+  width: 150px;
+  height: 50px;
+  border: none;
+  border-radius: 5px;
+  background-color: rgb(85, 102, 85);
+  color: #fff;
+  cursor: pointer;
+  text-transform: uppercase;
+  font-size: 0.9rem;
 }
